[package]
name = "s2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
scru128 = { version = "2.2.0", features = ["serde"] }
ssri = "9.0.0"
sled = "0.34.7"
bincode = "1.3.3"
cacache = { version = "11.6.0", default-features = false, features = ["tokio-runtime"] }

[dev-dependencies]
tempfile = "3.7.0"
